Bug 13930 - ctdbd should never assign client ID 0 for a client
Summary: ctdbd should never assign client ID 0 for a client
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: CTDB (show other bugs)
Version: 4.9.7
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-07 05:47 UTC by Martin Schwenke
Modified: 2019-05-21 10:53 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.9 and 4.10 (2.47 KB, patch)
2019-05-15 02:11 UTC, Martin Schwenke
amitay: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schwenke 2019-05-07 05:47:03 UTC
The attach and detach controls assign a special meaning to client ID 0: the control did not come from a client but came from another daemon instead.  This means that these controls can fail to operate as intended when the client ID is 0.
Comment 1 Martin Schwenke 2019-05-15 02:11:12 UTC
Created attachment 15153 [details]
Patch for 4.9 and 4.10

Same patch applies to both 4.9 and 4.10.
Comment 2 Amitay Isaacs 2019-05-15 03:42:04 UTC
Hi Karolin,

This is ready for v4-9 and v4-10.

Thanks.
Comment 3 Karolin Seeger 2019-05-16 10:28:27 UTC
Pushed to autobuild-v4-{10,9}-test.
Comment 4 Karolin Seeger 2019-05-21 10:53:57 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to both branches.
Closing out bug report.

Thanks!